--- a/index.html
+++ b/index.html
@@ -101,19 +101,14 @@
 
       <ul class="intro-social">
         <li>
-          <a href="#"><i class="fa fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/in/joaosczip/" target="_blank"
+            ><i class="fa fa-linkedin"></i
+          ></a>
         </li>
         <li>
-          <a href="#"><i class="fa fa-behance"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-dribbble"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="https://github.com/joaosczip" target="_blank"
+            ><i class="fa fa-github"></i
+          ></a>
         </li>
       </ul>
       <!-- /intro-social -->
@@ -175,7 +170,6 @@
               <span>joao.sczip@hotmail.com</span>
             </li>
           </ul>
-          <!-- /info-list -->
         </div>
 
         <div class="col-six tab-full">
@@ -199,6 +193,10 @@
             <li>
               <div class="progress percent100"></div>
               <strong>ReactJS, NodeJS</strong>
+            </li>
+            <li>
+              <div class="progress percent100"></div>
+              <strong>TDD, testing</strong>
             </li>
             <li>
               <div class="progress percent100"></div>
@@ -235,10 +233,7 @@
         </div>
       </div>
     </section>
-    <!-- /process-->
 
-    <!-- resume Section
-   ================================================== -->
     <section id="resume" class="grey-section">
       <div class="row section-intro">
         <div class="col-twelve">
@@ -393,21 +388,92 @@
       </div>
       <!-- /resume-timeline -->
     </section>
-    <!-- /features -->
 
-    <!-- Portfolio Section
-   ================================================== -->
     <section id="portfolio">
       <div class="row section-intro">
         <div class="col-twelve">
           <h5>Portfolio</h5>
           <h1>Some of My Works.</h1>
 
-          <p class="lead">
-            Lorem ipsum Do commodo in proident enim in dolor cupidatat
-            adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem
-            ipsum Consectetur ut in in eu do.
-          </p>
+          <div class="about-content">
+            <div class="col-twelve tab-full">
+							<ul class="portfolio-list">
+								<li>
+									<strong>Conversion forms:</strong>
+									<span>That project consist in a ReactJS client application and a NodeJS serverless API to capture and process data for real estate clients:
+										<ul>
+											<li>Integration with bankings APIs to simulate real estate financing;</li>
+											<li>E-mail service with AWS SES;</li>
+											<li>ReactJS;</li>
+											<li>NodeJS</li>
+											<li>Typescript;</li>
+											<li>Background Jobs;</li>
+											<li>Docker;</li>
+											<li>Gitlab for CI;</li>
+											<li>AWS Lambda - Serverless Framework;</li>
+											<li>TDD, unit and integration testing (Jest, React Testing Library, Cypress, Supertest).</li>
+										</ul>
+									</span>
+								</li>
+								<li>
+									<strong>Facebook catalog generation:</strong>
+									<span>Integration with Facebook Marketplace for a digital marketing company. The catalog content is obtained from the company clients (Real Estate companies).:
+										<ul>
+											<li>Data capture from websites and third party services integrations;</li>
+											<li>REST API;</li>
+											<li>Lumen 7;</li>
+											<li>PHPunit testing;</li>
+											<li>Facebook Marketplace integration;</li>
+											<li>Background Jobs;</li>
+											<li>Docker;</li>
+											<li>Gitlab for CI;</li>
+											<li>AWS ECS for insfraestructure.</li>
+										</ul>
+									</span>
+								</li>
+								<li>
+									<strong>Academic System:</strong>
+									<span>An complete academic system for my graduation university. That project includes financial operations, integrations with other academic institutions and complete academic management:
+										<ul>
+											<li>Financial charges;</li>
+											<li>Banking Integration;</li>
+											<li>Third-party API integration;</li>
+											<li>PHP;</li>
+											<li>JavaScript</li>
+											<li>Files and photos uploads with AWS S3;</li>
+										</ul>
+									</span>
+								</li>
+								<li>
+									<strong>Public Services Ombudsman:</strong>
+									<span>That application was devided in 3 smaller applications. An API build with Laravel 6, and two clients created with ReactJS. <br>
+									The API consist of a monolith, entirely developed with Laravel 6. One of the clients are specific to users that want to complain about one (or more) public services. The other client was built for the company behind those services.
+										<ul>
+											<li>REST API;</li>
+											<li>JWT Authentication;</li>
+											<li>OOP;</li>
+											<li>Laravel 6</li>
+											<li>ReactJS</li>
+											<li>Redis for caching and background jobs;</li>
+											<li>Photo uploads on AWS S3;</li>
+											<li>Infraestructure provisioning with AWS EBS;</li>
+											<li>Docker and Github.</li>
+										</ul>
+								</span>
+								</li>
+								<li>
+									<strong>Driving school management:</strong>
+									<span>Complete management for a local Driving School. The application was built entirely with Laravel, Docker and AWS for infraestructure managament. <br>Some functionalities include:
+										<ul>
+											<li>Complete management to students and instructors;</li>
+											<li>Theoretical and practical classes registrations;</li>
+										</ul>
+									</span>
+								</li>
+							</ul>
+						</div>
+						</div>
+          </div>
         </div>
       </div>
       <!-- /section-intro-->
