add articles section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<!--[if IE 8]><html class="no-js oldie ie8" lang="en"> <![endif]-->
-<!--[if IE 9]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html class="no-js" lang="en">
-  <!--<![endif]-->
+<html lang="en">
   <head>
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8" />
-    <title>Kards</title>
+    <title>João Guilherme Berti Sczip</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -36,8 +32,7 @@
   </head>
 
   <body id="top">
-    <!-- header 
-   ================================================== -->
+   
     <header>
       <div class="row">
         <div class="top-bar">
@@ -62,7 +57,7 @@
                 <a class="smoothscroll" href="#portfolio" title="">Portfolio</a>
               </li>
               <li>
-                <a class="smoothscroll" href="#articles" title="">Articles</a>
+                <a class="smoothscroll" href=".articles" title="">Articles</a>
               </li>
               <li>
                 <a class="smoothscroll" href="#contact" title="">Contact</a>
@@ -74,10 +69,7 @@
       </div>
       <!-- /row -->
     </header>
-    <!-- /header -->
 
-    <!-- intro section
-   ================================================== -->
     <section id="intro">
       <div class="intro-overlay"></div>
 
@@ -113,10 +105,7 @@
       </ul>
       <!-- /intro-social -->
     </section>
-    <!-- /intro -->
-
-    <!-- about section
-   ================================================== -->
+  
     <section id="about">
       <div class="row section-intro">
         <div class="col-twelve">
@@ -131,7 +120,7 @@
               my appreciation for that area. After graduating, I realized that
               only writing code was not enough, from that I started to get
               interested and study good software development practices and some
-              software engineering techniques (SOLID, TDD, Clean Architecure,
+              software engineering techniques (SOLID, TDD, Clean Architecure, Clean Code,
               etc...) to be able to build more flexible, abstracted and
               maintainable programs. I can easily move between the back and
               front end, having proficiency in Javascript and also in PHP, and
@@ -467,6 +456,11 @@
 										<ul>
 											<li>Complete management to students and instructors;</li>
 											<li>Theoretical and practical classes registrations;</li>
+											<li>Practical exams registrations;</li>
+											<li>Financial management (students and school);</li>
+											<li>Access Control (ACL);</li>
+											<li>Laravel 5</li>
+											<li>JavaScript</li>
 										</ul>
 									</span>
 								</li>
@@ -488,43 +482,43 @@
       </div>
       <!-- /portfolio-content -->
     </section>
-    <!-- /portfolio -->
 
-    <!-- CTA Section
-   ================================================== -->
-    <section id="cta" class="grey-section">
+    <section id="cta" class="grey-section articles">
       <div class="row cta-content">
         <div class="col-twelve section-ads">
           <h2 class="h01">
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"
-              >Styleshout Recommends Dreamhost.</a
-            >
+            Some articles that I've written (English and PT-BR).
           </h2>
 
-          <p class="lead">
-            Looking for an awesome and reliable webhosting? Try
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"
-              ><span>DreamHost</span></a
-            >. Get <span>$50 off</span> when you sign up with the promocode
-            <span>styleshout</span>.
-            <!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
-          </p>
-
-          <div class="action">
-            <a
-              class="button button-primary large"
-              href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"
-              >Sign Up Now</a
-            >
+					<div class="about-content">
+            <div class="col-twelve tab-full">
+							<ul class="articles-list">
+								<li>
+									<strong><a target="_blank" href="https://dev.to/joaosczip/clean-architecture-a-little-introduction-4ag6">Clean Architecture — A little introduction</a></strong>
+								</li>
+								<li>
+									<strong>
+										<a target="_blank" href="https://dev.to/joaosczip/applying-open-closed-principle-with-decorator-pattern-in-typescript-242j">Applying Open-Closed Principle with Decorator Pattern in Typescript</a>
+									</strong>
+								</li>
+								<li>
+									<strong>
+										<a target="_blank" href="https://medium.com/@joaogbsczip/implementando-clean-architecture-no-reactjs-af17fb70ca6">Implementando Clean Architecture no ReactJS</a>
+									</strong>
+								</li>
+								<li>
+									<strong>
+										<a target="_blank" href="https://medium.com/@joaogbsczip/clean-architecture-reactjs-pt-2-fa1a166dcfea">Clean Architecture + ReactJS Pt. 2</a>
+									</strong>
+								</li>
+						</div>
+					</div>
+          
           </div>
         </div>
       </div>
-      <!-- /cta-content -->
     </section>
-    <!-- /cta -->
 
-    <!-- contact
-   ================================================== -->
     <section id="contact">
       <div class="row section-intro">
         <div class="col-twelve">
@@ -573,14 +567,11 @@
       </div>
       <!-- /contact-info -->
     </section>
-    <!-- /contact -->
 
     <div id="preloader">
       <div id="loader"></div>
     </div>
 
-    <!-- Java Script
-   ================================================== -->
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
